--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="chat_section">
         <div class="brand">
             <img  height="40" src="/Whatsapp_logo.jpg" alt="">
-             <h1>Wassup</h1>
+             <h1>Wow Chat</h1>
         </div>
 
         <div class="message_area"></div>   
